fix color of room description in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,6 +139,7 @@ address {
 
 .mat-card {
   line-height: 1.5 !important;
+  color: var(--on-surface) !important;
 }
 
 a.info {
